tests/baselines/reference/breakTarget5.errors.txt
==== tests/cases/compiler/breakTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }